Bug fixes for Java 1.4